Fixed z-index issue on CTAs panel

--- a/Shared/Styles/Layout/_layout.scss
+++ b/Shared/Styles/Layout/_layout.scss
@@ -102,6 +102,7 @@ body {
 // CTAS
 //----------------------------------------------------------------------------------------------
 #CTAs {
+  z-index                       : 20;
   position                      : fixed;
   right                         : 0;
   bottom                        : 0;
